moving to a subfolder

--- a/setup.yml
+++ b/setup.yml
@@ -12,8 +12,9 @@
     - vars.yml
 
   tasks:
-    - include_tasks: start.yml
-    - include_tasks: billing.yml
+    - include_tasks: ./tasks/start.yml
+    - include_tasks: ./tasks/billing.yml
+    - include_tasks: ./tasks/service-account.yml
 
     - name: Re-write vars.yml with updated values
       ansible.builtin.copy:
