--- a/aws/aws-setup.yml
+++ b/aws/aws-setup.yml
@@ -136,3 +136,68 @@
         path: terraform.tfvars
         regexp: '^account_id ='
         line: 'account_id = "{{ account_id }}"'
+
+  ############################################################
+  # Create an IAM user for the Dev Box
+  ############################################################
+
+    - name: Check if IAM user for Dev Box exists
+      command: aws iam get-user --user-name {{ system_id }}
+      register: check_user
+      ignore_errors: true
+
+    - name: Create IAM user for Dev Box if not exists
+      command: aws iam create-user --user-name {{ system_id }}
+      register: create_user
+      when: check_user.rc != 0
+
+    - name: Display user details
+      debug:
+        var: create_user.stdout | default('User already exists')
+    - name: Check if SSH key pair exists
+      stat:
+        path: "./{{ system_id }}-{{ short_uuid }}.pem"
+      register: key_file
+
+    - name: Generate SSH key pair
+      openssh_keypair:
+        path: "./{{ system_id }}-{{ short_uuid }}.pem"
+        type: rsa
+        size: 4096
+        state: present
+        force: no
+      register: ssh_key
+      when: not key_file.stat.exists
+
+    - name: Display public key
+      debug:
+        var: ssh_key.public_key
+      when: not key_file.stat.exists
+
+    - name: Read existing public key
+      command: cat "./{{ system_id }}-{{ short_uuid }}.pem.pub"
+      register: existing_public_key
+      when: key_file.stat.exists
+
+    - name: Display existing public key
+      debug:
+        var: existing_public_key.stdout
+      when: key_file.stat.exists
+
+    - name: Check for the existence of the key pair in EC2
+      command: aws ec2 describe-key-pairs --filters "Name=key-name,Values={{ system_id }}"
+      register: key_pair_exists
+      ignore_errors: true
+
+    - name: Display key pair exists
+      debug:
+        var: key_pair_exists.stdout
+
+    - name: Import the key pair into EC2
+      command: aws ec2 import-key-pair --key-name {{ system_id }}-{{ short_uuid }} --public-key-material fileb://./{{ system_id }}-{{ short_uuid }}.pem.pub
+      when: (key_pair_exists.stdout | from_json).KeyPairs | length == 0
+
+    ####################################
+    # Create an s3 bucket for state
+    ####################################
+
